common-gateway/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: common-gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
  name: common-gateway
  namespace: common-gateway
spec:
  gatewayClassName: eg
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: All
    hostname: "*.k8s.br0.no"
    name: https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: common-gateway-tls
      mode: Terminate
